Upgrade dependency packages to support Spring 6.x and SpringBoot 3.x